refactor：解耦seeker和recruitment模块